--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: Run Unit Tests
           command: |
-            ./node_modules/mocha/bin/_mocha  tests/ --reporter mochawesome --reporter-options reportDir=test-results,reportFilename=test-results || true
+            npm run test 
       - store_test_results:
           path: test-results
   build_docker_image:
