--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             npm run test 
       - store_test_results:
-          path: test-results
+          path: mochawesome-report
   build_docker_image:
     docker:
       - image: circleci/node:12
