--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ workflows:
   build_test:
     jobs:
       - run_tests
-      # - build_docker_image
+      - build_docker_image
       # - gke_create_cluster
       # - gke_deploy_app:
       #     requires:
