--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,9 @@ jobs:
     steps:
       - checkout
       - aws-cli/install
+      - aws-cli/setup:
+          aws-access-key-id: AKIA5EIP22SG76YAFFXX 
+          aws-secret-access-key: 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
       - setup_remote_docker:
           docker_layer_caching: false
       - run:
