--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
 orbs:
   aws-cli: circleci/aws-cli@2.0.3
+  aws-ecr: circleci/aws-ecr@2.0
+  aws-ecs: circleci/aws-ecs@2.0
 jobs:
   run_tests:
     docker:
@@ -33,6 +35,26 @@ jobs:
   #           docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
   #           echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
   #           docker push $DOCKER_LOGIN/$IMAGE_NAME
+  # build_docker_image:
+  #   docker:
+  #     - image: circleci/node:12
+  #   steps:
+  #     - checkout
+  #     - aws-cli/install
+  #     - aws-cli/setup:
+  #         aws-access-key-id: AWS_ACCESS_KEY_ID 
+  #         aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+  #     - setup_remote_docker:
+  #         docker_layer_caching: false
+  #     - run:
+  #         name: Build Docker image
+  #         command: |
+  #           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 902513218701.dkr.ecr.us-east-1.amazonaws.com
+  #           export TAG=0.2.<< pipeline.number >>
+  #           export IMAGE_NAME=circleci-demo
+  #           docker build -t circleci-demo .
+  #           docker tag circleci-demo:latest 902513218701.dkr.ecr.us-east-1.amazonaws.com/circleci-demo:latest
+  #           docker push 902513218701.dkr.ecr.us-east-1.amazonaws.com/circleci-demo:latest
   build_docker_image:
     docker:
       - image: circleci/node:12
@@ -44,15 +66,15 @@ jobs:
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
       - setup_remote_docker:
           docker_layer_caching: false
-      - run:
-          name: Build Docker image
-          command: |
-            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 902513218701.dkr.ecr.us-east-1.amazonaws.com
-            export TAG=0.2.<< pipeline.number >>
-            export IMAGE_NAME=circleci-demo
-            docker build -t circleci-demo .
-            docker tag circleci-demo:latest 902513218701.dkr.ecr.us-east-1.amazonaws.com/circleci-demo:latest
-            docker push 902513218701.dkr.ecr.us-east-1.amazonaws.com/circleci-demo:latest         
+      - aws-ecr/build-and-push-image:
+          repo: "${AWS_RESOURCE_NAME_PREFIX}"
+          tag: "${CIRCLE_SHA1}"
+      - aws-ecs/deploy-service-update:
+          requires:
+            - aws-ecr/build-and-push-image # only run this job once aws-ecr/build-and-push-image has completed
+          family: "${AWS_RESOURCE_NAME_PREFIX}-service"
+          cluster-name: "${AWS_RESOURCE_NAME_PREFIX}-cluster"
+          container-image-name-updates: "container=${AWS_RESOURCE_NAME_PREFIX}-service,tag=${CIRCLE_SHA1}"               
 workflows:
   build_test:
     jobs:
