--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,10 +59,11 @@ jobs:
     docker:
       - image: circleci/node:12
     steps:
+      - checkout
       - aws-cli/install
       - aws-cli/setup:
-        aws-access-key-id: AWS_ACCESS_KEY_ID 
-        aws-secret-access-key: AWS_SECRET_ACCESS_KEY      
+          aws-access-key-id: AWS_ACCESS_KEY_ID 
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY      
       - aws-ecs/run-task:
           awsvpc: false
           cluster: DemoAppCluster
