--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,9 +88,9 @@ jobs:
       #     container-env-var-updates: "container=${ECS_SERVICE_NAME},name=VERSION_INFO,value=${CIRCLE_SHA1}_${CIRCLE_BUILD_NUM},container=${ECS_SERVICE_NAME},name=BUILD_DATE,value=\"$(date)\""
       #     verify-revision-is-deployed: true
       - aws-ecs/update-service:
-          cluster-name: 'DemoAppCluster'
-          container-image-name-updates: 'container=Circlecidemo,tag=${CIRCLE_SHA1}'
-          family: 'Circlecidemo'                          
+          cluster-name: "${ECS_CLUSTER_NAME}"
+          container-image-name-updates: 'container=${ECS_SERVICE_NAME},tag=${CIRCLE_SHA1}'
+          family: '${ECS_SERVICE_NAME}'                    
 workflows:
   build_test:
     jobs:
