--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
       #     verify-revision-is-deployed: true
       - aws-ecs/update-service:
           cluster-name: "DemoAppCluster"
-          container-image-name-updates: 'container=CircleCi,tag=${CIRCLE_SHA1}'
+          container-image-name-updates: 'container=Circlecidemo,tag=${CIRCLE_SHA1}'
           family: 'CircleCi'                    
 workflows:
   build_test:
