--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,10 +82,10 @@ jobs:
             aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 902513218701.dkr.ecr.us-east-1.amazonaws.com
             docker push $FULL_IMAGE_NAME
       - aws-ecs/update-service:
-          family: "CircleCi"
+          family: "Circleciservice"
           cluster-name: "DemoAppCluster"
-          container-image-name-updates: "container=Circlecidemo,image-and-tag=${FULL_IMAGE_NAME}"
-          container-env-var-updates: "container=Circlecidemo,name=VERSION_INFO,value=${CIRCLE_SHA1}_${CIRCLE_BUILD_NUM},container=Circlecidemo,name=BUILD_DATE,value=\"$(date)\""
+          container-image-name-updates: "container=Circleciservice,image-and-tag=${FULL_IMAGE_NAME}"
+          container-env-var-updates: "container=Circleciservice,name=VERSION_INFO,value=${CIRCLE_SHA1}_${CIRCLE_BUILD_NUM},container=Circleciservice,name=BUILD_DATE,value=\"$(date)\""
           verify-revision-is-deployed: true
       # - aws-ecs/update-service:
       #     cluster-name: "DemoAppCluster"
